# bifrost_cge_mlst

./: Dockerfile  HISTORY.md  README.md  config.yaml  custom_install.sh  docker-compose.dev.yaml  docker-compose.yaml  environment.yml  install.sh  launcher.py  pipeline.smk  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
bifrost_cge_mlst/: __main__.py  config.yaml  datadump.py  pipeline.smk  prev_arg_rule__cge_mlst.py  rule__cge_mlst.py  script_pipeline.smk  snakemake_script_rule__cge_mlst.py  yaml_test.py
envs/: cge_mlst-conda-spec.txt  cge_mlst.yml
tests/: test_1_standard_workflow.py  test_simple.py
