[bumpversion]
current_version = 2.2.9
parse = (v(?P<major>\d+))(.(?P<minor>\d+))(.(?P<patch>\d+))
serialize = {major}.{minor}.{patch}
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bifrost_cge_mlst/config.yaml]
search = {current_version}
replace = {new_version}

[bumpversion:file:bifrost_cge_mlst/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:tests/test_simple.py]
search = component_name = "cge_mlst__{current_version}"
replace = component_name = "cge_mlst__{new_version}"

[tool:pytest]
minversion = 6.0
addopts = -ra -q --durations=0
testpaths = 
	tests
